unpackaged/main/default/objects/STWNurembergDeliveryMethod__c/STWNurembergDeliveryMethod__c.object-meta.xml
<CustomObject>
    <label>STW Nuremberg delivery method</label>
    <nameField>
        <displayFormat>STW-NDM-{00000000}</displayFormat>
        <label>STW Nuremberg delivery method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STW Nuremberg delivery method</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>