unpackaged/main/default/objects/STWNurembergDeliveryMethod__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>