unpackaged/main/default/objects/STWNurembergDeliveryMethod__c/fields/DeliveryMethodName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethodName__c</fullName>
    <formula>deliveryMethodId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Method</label>
    <type>Text</type>
</CustomField>