unpackaged/main/default/objects/STWNurembergDeliveryMethod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>storeOrigin__c</columns>
    <columns>country__c</columns>
    <columns>postalCode__c</columns>
    <columns>deliveryMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>